fixed bug overflow panel-list

--- a/app/stylesheets/partials/_layout.scss
+++ b/app/stylesheets/partials/_layout.scss
@@ -70,7 +70,7 @@
           background-color: $hover-color; 
         }
       } 
-      &.op-title { 
+      &.op-title {
         color: #688db3;
         text-shadow: #fff 0px 1px 1px;
       }
@@ -174,6 +174,7 @@
 	    font-weight: bold;
 	    font-size: 110%;
 	    margin-bottom: 2px;
+            overflow: hidden;
 	  }
 	  .comment { 
 	    color: $grey;
